# notebooks

./: .gitignore  CLAUDE.md  README.md  push.sh  pyproject.toml
.claude/commands/: commit.md
misc/: gpu.ipynb  markdown.ipynb  word.ipynb  word.py  youtube.ipynb
pennylane/: grover.ipynb  install.ipynb  snippet.ipynb
qiskit/: Devoir.ipynb  QML_Lab1.ipynb  QML_Lab2.ipynb  QML_Lab3.ipynb  QML_Lab4.ipynb  ibm-quantum.ipynb  install.ipynb  qiskit_demo.ipynb
qiskit/grover-imaca/: grover_notebook_FR.ipynb  voyage_quanta.ipynb
rag/: essence_of_rag.md
