[project]
name = "notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "markdown>=3.10",
    "markitdown[all]>=0.1.3",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "python-docx>=1.2.0",
    "qiskit[visualization]>=2.2.3",
    "qiskit-ibm-runtime>=0.43.1",
    "yt-dlp[default]>=2025.11.12",
    "qiskit-aer>=0.17.2",
    "pylatexenc>=2.10",
    "pennylane>=0.43.1",
]
